Correct rostalk.html for Amber

--- a/rostalk.html
+++ b/rostalk.html
@@ -4,12 +4,12 @@
   
     <meta name="author" content="Serge Stinckwich">
     <link rel="stylesheet" type="text/css" href="./ide/style.css">
-    <script type="text/javascript" src="./js/jtalk.js"></script>
+    <script type="text/javascript" src="./js/amber.js"></script>
     <script type="text/javascript" src="http://brown-ros-pkg.googlecode.com/svn/tags/brown-ros-pkg/rosjs/ros.min.js"></script>
   </head>
   <body>
     <script type="text/javascript">
-      loadJtalk({files: ['Rostalk-core.js']});
+      loadAmber({files: ['Rostalk-core.js']});
     </script>
     <script type="text/javascript">
       jQuery(window).scroll(function() {
