Correct rostalk.html for Amber

--- a/rostalk.html
+++ b/rostalk.html
@@ -30,9 +30,9 @@
       <div class="main">
 	<div class="box first">
 	  <div class="content">
-	    <h1>Rostalk is a ROS client implemented in Jtalk that runs on the JavaScript runtime.</h1>
-	    <p> Rostalk is a <a href="http://www.ros.org/">ROS</a> client implemented in Jtalk that used <a href="http://www.ros.org/wiki/rosbridge/Tutorials/Using%20Javascript%20to%20control%20ROS%20via%20rosjs">rosjs</a> (ROS javascript binding) and rosbridge. The main idea of Rostalk is to be able to develop and control robotic systems on the web with a high-level language like Smalltalk.
-	    <p>Jtalk is an implementation of the  <a href="http://en.wikipedia.org/wiki/Smalltalk">Smalltalk</a> language that runs on top of the <a href="http://en.wikipedia.org/wiki/Javascript">JavaScript</a> runtime. It is designed to make client-side development faster and easier. Jtalk is written in itself, including the parser and compiler. Jtalk compiles into efficient JavaScript, mapping one-to-one with the equivalent JavaScript. There is no interpretation at runtime.</p>
+	    <h1>Rostalk is a ROS client implemented in Amber that runs on the JavaScript runtime.</h1>
+	    <p> Rostalk is a <a href="http://www.ros.org/">ROS</a> client implemented in Amber that used <a href="http://www.ros.org/wiki/rosbridge/Tutorials/Using%20Javascript%20to%20control%20ROS%20via%20rosjs">rosjs</a> (ROS javascript binding) and rosbridge. The main idea of Rostalk is to be able to develop and control robotic systems on the web with a high-level language like Smalltalk.
+	    <p>Amber is an implementation of the  <a href="http://en.wikipedia.org/wiki/Smalltalk">Smalltalk</a> language that runs on top of the <a href="http://en.wikipedia.org/wiki/Javascript">JavaScript</a> runtime. It is designed to make client-side development faster and easier. Amber is written in itself, including the parser and compiler. Amber compiles into efficient JavaScript, mapping one-to-one with the equivalent JavaScript. There is no interpretation at runtime.</p>
 	    <p>Try a <button onclick="smalltalk.Browser._open()"> Class browser</button> right now!</p>
 	  </div>
 	  
